# Telescope

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Custom.icls  LICENSE  README.md  Telescope.cpp  main.cpp  proposal.md  telescope.cpp  telescope.h  telescope.hpp  telescope.jl  temp.jl  test_julia.sh  ~telescope.h  ~telescope.hpp
.github/workflows/: Test.yaml
cmake/: FindSphinx.cmake  Findshaderc_shared.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  TODO.md  audio.rst  camera.rst  common.rst  common_physics.rst  common_render.rst  common_sound.rst  conf.py  example.rst  graphics_interface.rst  in_julia.rst  index.rst  input_handler.rst  installation.rst  list.rst  other.rst  physics.rst  physics_interface.rst  rebuild_docs.sh  render_loop.rst  requirements.txt  shapes.rst  sound.rst  texture.rst  window.rst
docs/.doxygen/html/: annotated.html  bullet__interface_8hpp_source.html  classes.html  collision__event_8hpp_source.html  common_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  physics__object_8hpp_source.html  struct_t_s___collision_event-members.html  struct_t_s___collision_event.html  struct_t_s___physics_object-members.html  struct_t_s___physics_object.html  struct_t_s___position_info-members.html  struct_t_s___position_info.html  struct_t_s___texture-members.html  struct_t_s___texture.html  struct_t_s___velocity_info-members.html  struct_t_s___velocity_info.html  struct_t_s___vertex-members.html  struct_t_s___vertex.html  vertex_8hpp_source.html  vulkan__interface_8hpp_source.html
docs/.doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js  variables_d.js
docs/.doxygen/latex/: annotated.tex  refman.tex  struct_t_s___collision_event.tex  struct_t_s___physics_object.tex  struct_t_s___position_info.tex  struct_t_s___texture.tex  struct_t_s___velocity_info.tex  struct_t_s___vertex.tex
docs/.doxygen/xml/: bullet__interface_8hpp.xml  collision__event_8hpp.xml  common_8hpp.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  physics__object_8hpp.xml  struct_t_s___collision_event.xml  struct_t_s___physics_object.xml  struct_t_s___position_info.xml  struct_t_s___texture.xml  struct_t_s___velocity_info.xml  struct_t_s___vertex.xml  vertex_8hpp.xml  vulkan__interface_8hpp.xml
docs/_templates/: layout.html
include/: CollisionLineShape.hpp  angle.hpp  audio.hpp  bullet_interface.hpp  c_interface.hpp  camera.hpp  circle_shape.hpp  collision_circle.hpp  collision_circle_shape.hpp  collision_event.hpp  collision_handler.hpp  collision_line.hpp  collision_line_sequence.hpp  collision_line_shape.hpp  collision_polygon.hpp  collision_rectangle_shape.hpp  collision_render_shape.hpp  collision_shape.hpp  collision_triangle_shape.hpp  collision_wireframe.hpp  collision_wireframe_shape.hpp  color.hpp  common.hpp  exceptions.hpp  geometric_shapes.hpp  input_handler.hpp  key_or_button.hpp  link_as_c.hpp  logging.hpp  music.hpp  music_handler.hpp  physics.hpp  physics_object.hpp  physics_world.hpp  polygon_shape.hpp  rectangle_shape.hpp  render_target.hpp  render_texture.hpp  renderable.hpp  resource_id.hpp  (+13 more)
include/physics/: collision_circle.hpp  collision_circle_shape.hpp  collision_handler.hpp  collision_line.hpp  collision_polygon.hpp  collision_rectangle_shape.hpp  collision_shape.hpp  collision_triangle_shape.hpp  collision_wireframe.hpp  physics_object.hpp  physics_world.hpp  ~collision_filter.hpp
julia/: c_interface.cpp  c_interface.hpp  telescope.jl
src/: CMakeLists.txt  angle.cpp  c_interface.cpp  camera.cpp  circle_shape.cpp  collision_circle.cpp  collision_handler.cpp  collision_line.cpp  collision_line_sequence.cpp  collision_polygon.cpp  collision_render_shape.cpp  collision_shape.cpp  collision_wireframe.cpp  collision_x_shape.cpp  color.cpp  common.cpp  exceptions.cpp  input_handler.cpp  key_or_button.cpp  logging.inl  music.cpp  music.inl  music_handler.cpp  physics_object.cpp  physics_world.cpp  polygon_shape.cpp  rectangle_shape.cpp  render_target.cpp  render_texture.cpp  renderable.cpp  shape.cpp  sound.cpp  sound_handler.cpp  src.cpp  src.inl  static_texture.cpp  telescope.cpp  telescope.h  telescope.hpp  texture.cpp  (+7 more)
test/: example.cpp  input_handler.cpp  run_tests.sh  temp_test.cpp  template_test.cpp  test.hpp  test_bullet.cpp  test_common.cpp  test_main.cpp  test_ts.cpp  test_vertex.cpp  test_vma.cpp  test_vulkan.cpp  time.cpp  ts_ts.cpp  ts_vertex.cpp  ts_vk.cpp  ts_vma.cpp
